Tests/CompilerTests/negative/use-before-declaration.hylo
fun use<T>(x: T) {}

public fun main() {
  use(x)
  let x = ()
}
