Tests/CompilerTests/negative/use-before-declaration.expected
negative/use-before-declaration.hylo:4.7-8: error: use of 'x' before its declaration
  use(x)
      ^
